--- a/generators/server/templates/app/.github/workflows/gradle-dev.yml
+++ b/generators/server/templates/app/.github/workflows/gradle-dev.yml
@@ -1,26 +1,27 @@
-name: Dev Branch CI
+name: Feature Branch CI
 
 on:
   push:
     branches:
-      - '*'
+      - '**'
       - '!master'
+      - '!main'
 
 jobs:
   build:
-    name: Run Unit & Integration Tests
-    runs-on: ubuntu-18.04
+    name: Build
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set up JDK 11
+      - name: Set up JDK <%= JAVA_VERSION %>
         uses: actions/setup-java@v1
         with:
-          java-version: 11
-          
+          java-version: <%= JAVA_VERSION %>
+
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
-      
+
       - name: Cache Gradle packages
         uses: actions/cache@v2
         with:
