--- a/generators/server/templates/app/.github/workflows/maven-master.yml
+++ b/generators/server/templates/app/.github/workflows/maven-master.yml
@@ -1,21 +1,22 @@
-name: Master Branch CI
+name: Main Branch CI
 
 on:
   push:
     branches:
       - master
+      - main
 
 jobs:
   build:
-    name: Run Unit & Integration Tests
-    runs-on: ubuntu-18.04
+    name: Build
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set up JDK 11
+      - name: Set up JDK <%= JAVA_VERSION %>
         uses: actions/setup-java@v1
         with:
-          java-version: 11
+          java-version: <%= JAVA_VERSION %>
 
       - name: Grant execute permission for mvnw
         run: chmod +x mvnw
@@ -29,4 +30,4 @@ jobs:
             ${{ runner.os }}-maven-
 
       - name: Build with Maven
-        run: ./mvnw clean install
+        run: ./mvnw clean verify
