--- a/generators/server/templates/app/.github/workflows/maven-dev.yml
+++ b/generators/server/templates/app/.github/workflows/maven-dev.yml
@@ -12,23 +12,17 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Set up JDK <%= JAVA_VERSION %>
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3.1.1
         with:
           java-version: <%= JAVA_VERSION %>
+          distribution: 'zulu'
+          cache: 'maven'
 
       - name: Grant execute permission for mvnw
         run: chmod +x mvnw
-
-      - name: Cache local Maven repository
-        uses: actions/cache@v2
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
 
       - name: Build with Maven
         run: ./mvnw clean install
