--- a/generators/server/templates/app/Dockerfile
+++ b/generators/server/templates/app/Dockerfile
@@ -1,13 +1,19 @@
-FROM openjdk:11-jdk-slim
-VOLUME /tmp
+FROM eclipse-temurin:17-jre-focal as builder
+WORKDIR application
 <%_ if (buildTool === 'maven') { _%>
-ADD target/<%= appName %>-<%= DEFAULT_APP_VERSION %>.jar app.jar
+ARG JAR_FILE=target/<%= appName %>-<%= DEFAULT_APP_VERSION %>.jar
 <%_ } _%>
 <%_ if (buildTool === 'gradle') { _%>
-ADD build/libs/<%= appName %>-<%= DEFAULT_APP_VERSION %>.jar app.jar
+ARG JAR_FILE=build/libs/<%= appName %>-<%= DEFAULT_APP_VERSION %>.jar
 <%_ } _%>
-RUN sh -c 'touch /app.jar'
-ENV JAVA_OPTS="-Xdebug -Xrunjdwp:server=y,transport=dt_socket,address=8787,suspend=n"
-ENV SPRING_PROFILES_ACTIVE "default"
-EXPOSE 8080 8787
-ENTRYPOINT [ "sh", "-c", "java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -Dspring.profiles.active=$SPRING_PROFILES_ACTIVE -jar /app.jar" ]
+COPY ${JAR_FILE} application.jar
+RUN java -Djarmode=layertools -jar application.jar extract
+
+# the second stage of our build will copy the extracted layers
+FROM eclipse-temurin:17-jre-focal
+WORKDIR application
+COPY --from=builder application/dependencies/ ./
+COPY --from=builder application/spring-boot-loader/ ./
+COPY --from=builder application/snapshot-dependencies/ ./
+COPY --from=builder application/application/ ./
+ENTRYPOINT ["java", "org.springframework.boot.loader.JarLauncher"]
