Using shelljs to format code

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "chalk": "4.1.0",
     "lodash": "4.17.20",
+    "shelljs": "^0.8.5",
     "yeoman-generator": "4.12.0"
   },
   "devDependencies": {
