--- a/package.json
+++ b/package.json
@@ -28,17 +28,18 @@
   },
   "homepage": "https://github.com/sivaprasadreddy/generator-springboot",
   "dependencies": {
-    "chalk": "4.1.0",
-    "lodash": "4.17.20",
-    "shelljs": "^0.8.5",
-    "yeoman-generator": "4.12.0"
+    "chalk": "4.1.2",
+    "lodash": "4.17.21",
+    "shelljs": "0.8.5",
+    "yeoman-environment": "3.10.0",
+    "yeoman-generator": "5.7.0"
   },
   "devDependencies": {
-    "chai": "4.2.0",
-    "fs-extra": "9.0.1",
-    "mocha": "8.2.1",
-    "sinon": "9.2.2",
+    "chai": "4.3.6",
+    "fs-extra": "10.1.0",
+    "mocha": "10.0.0",
+    "sinon": "14.0.0",
     "yeoman-assert": "3.1.1",
-    "yeoman-test": "3.0.0"
+    "yeoman-test": "6.3.0"
   }
 }
