adds  logstash configuration

--- a/generators/server/templates/app/src/main/resources/application.properties
+++ b/generators/server/templates/app/src/main/resources/application.properties
@@ -45,3 +45,7 @@ spring.flyway.locations=classpath:/db/migration/{vendor}
 <%_ if (dbMigrationTool === 'liquibase') { _%>
 spring.liquibase.change-log=classpath:/db/migration/liquibase-changelog.xml
 <%_ } _%>
+
+ <%_ if (features.includes('elk')) { _%>
+application.logstash-host=localhost
+ <%_ } _%>
