--- a/generators/server/templates/app/src/main/resources/application-local.properties
+++ b/generators/server/templates/app/src/main/resources/application-local.properties
@@ -14,8 +14,13 @@ spring.datasource.username=appuser
 spring.datasource.password=secret
 
 <%_ if (features.includes('localstack')) { _%>
-cloud.aws.stack.auto=false
-cloud.aws.region.static=us-east-1
-application.endpoint-uri=http://localhost:4566
-application.region=us-east-1
+###AWS
+spring.cloud.aws.sqs.endpoint=http://localhost:4566
+spring.cloud.aws.sqs.region=us-east-1
+spring.cloud.aws.s3.endpoint=http://localhost:4566
+spring.cloud.aws.s3.region=us-east-1
+
+spring.cloud.aws.credentials.access-key=noop
+spring.cloud.aws.credentials.secret-key=noop
+spring.cloud.aws.region.static=us-east-1
 <%_ } _%>
