--- a/generators/server/templates/app/src/main/resources/application.properties
+++ b/generators/server/templates/app/src/main/resources/application.properties
@@ -45,3 +45,5 @@ spring.flyway.locations=classpath:/db/migration/{vendor}
 <%_ if (dbMigrationTool === 'liquibase') { _%>
 spring.liquibase.change-log=classpath:/db/migration/liquibase-changelog.xml
 <%_ } _%>
+
+spring.mvc.problemdetails.enabled=true
