--- a/generators/server/templates/maven/pom.xml
+++ b/generators/server/templates/maven/pom.xml
@@ -203,6 +203,15 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <%_ if (features.includes('localstack')) { _%>
+            <dependency>
+                <groupId>io.awspring.cloud</groupId>
+                <artifactId>spring-cloud-aws-dependencies</artifactId>
+                <version>${spring-cloud-aws.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <%_ } _%>
             <dependency>
                 <groupId>org.testcontainers</groupId>
                 <artifactId>testcontainers-bom</artifactId>
