--- a/generators/server/templates/maven/pom.xml
+++ b/generators/server/templates/maven/pom.xml
@@ -21,7 +21,7 @@
         <java.version><%= JAVA_VERSION %></java.version>
         <spring-cloud.version><%= SPRING_CLOUD_VERSION %></spring-cloud.version>
         <%_ if (features.includes('localstack')) { _%>
-        <spring-cloud-aws-version><%= SPRING_CLOUD_AWS_VERSION %></spring-cloud-aws-version>
+        <spring-cloud-aws.version><%= SPRING_CLOUD_AWS_VERSION %></spring-cloud-aws.version>
         <%_ } _%>
         <springdoc-openapi.version><%= SPRINGDOC_OPENAPI_VERSION %></springdoc-openapi.version>
         <commons-io.version><%= COMMONS_IO_VERSION %></commons-io.version>
@@ -77,13 +77,11 @@
         <%_ if (features.includes('localstack')) { _%>
         <dependency>
             <groupId>io.awspring.cloud</groupId>
-            <artifactId>spring-cloud-aws-autoconfigure</artifactId>
-            <version>${spring-cloud-aws-version}</version>
+            <artifactId>spring-cloud-aws-strater</artifactId>
         </dependency>
         <dependency>
             <groupId>io.awspring.cloud</groupId>
-            <artifactId>spring-cloud-aws-messaging</artifactId>
-            <version>${spring-cloud-aws-version}</version>
+            <artifactId>spring-cloud-aws-starter-sqs</artifactId>
         </dependency>
         <%_ } _%>
         <dependency>
@@ -189,6 +187,12 @@
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>localstack</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <!-- AWS SDK v1 is required by testcontainers-localstack -->
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-core</artifactId>
             <scope>test</scope>
         </dependency>
         <%_ } _%>
@@ -441,6 +445,9 @@
             <id>spring-milestones</id>
             <name>Spring Milestones</name>
             <url>https://repo.spring.io/milestone</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
         </repository>
     </repositories>
 </project>
