--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,7 +2,12 @@
 # Please adjust to your needs (see https://www.gitpod.io/docs/config-gitpod-file)
 # and commit this file to your remote git repository to share the goodness with others.
 
+image:
+  file: .gitpod.Dockerfile
+
 tasks:
-  - init: npm install
+  - before: npm install -g yo
+    init: npm install
+
 
 
