Upgrade to springboot 3 (#49)
* Upgrade to springboot 3

* migrate to new way of configuration

* fixes issues with generation aws sample

* fixes issue generating & starting gradle project

* removes zalando starter

* typo fix

* changing type of test to integrationTest

* add Service Junit Test

* Polish implementation and gitpod config

* fixes issue with hardcoded assertion

* Using JPA New mappings

--- a/generators/server/templates/maven/pom.xml
+++ b/generators/server/templates/maven/pom.xml
@@ -21,23 +21,21 @@
         <java.version><%= JAVA_VERSION %></java.version>
         <spring-cloud.version><%= SPRING_CLOUD_VERSION %></spring-cloud.version>
         <%_ if (features.includes('localstack')) { _%>
-        <spring-cloud-aws-version><%= SPRING_CLOUD_AWS_VERSION %></spring-cloud-aws-version>
+        <spring-cloud-aws.version><%= SPRING_CLOUD_AWS_VERSION %></spring-cloud-aws.version>
         <%_ } _%>
         <%_ if (features.includes('elk')) { _%>
         <logstash-logback-encoder.version><%= LOGSTASH_LOGBACK_ENCODER %></logstash-logback-encoder.version>
         <%_ } _%>
-        <problem-spring-web.version><%= PROBLEM_SPRING_WEB_VERSION %></problem-spring-web.version>
         <springdoc-openapi.version><%= SPRINGDOC_OPENAPI_VERSION %></springdoc-openapi.version>
-        <commons-lang3.version><%= COMMONS_LANG_VERSION %></commons-lang3.version>
         <commons-io.version><%= COMMONS_IO_VERSION %></commons-io.version>
 
         <testcontainers.version><%= TEST_CONTAINERS_VERSION %></testcontainers.version>
-        <awaitility.version><%= AWAITILITY_VERSION %></awaitility.version>
-
+        
         <project.testresult.directory>${project.build.directory}/test-results</project.testresult.directory>
         <spotless.version><%= MAVEN_SPOTLESS_PLUGIN_VERSION %></spotless.version>
         <dependency-check-maven.version><%= MAVEN_DEPENDENCY_CHECK_PLUGIN_VERSION %></dependency-check-maven.version>
         <properties-maven-plugin.version><%= MAVEN_PROPERTIES_PLUGIN_VERSION %></properties-maven-plugin.version>
+        <maven-surefire-plugin.version><%= MAVEN_SUREFIRE_PLUGIN_VERSION %></maven-surefire-plugin.version>
         <maven-failsafe-plugin.version><%= MAVEN_FAILSAFE_PLUGIN_VERSION %></maven-failsafe-plugin.version>
         <sonar-maven-plugin.version><%= MAVEN_SONAR_PLUGIN_VERSION %></sonar-maven-plugin.version>
         <jacoco-maven-plugin.version><%= MAVEN_JACOCO_PLUGIN_VERSION %></jacoco-maven-plugin.version>
@@ -64,14 +62,10 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.zalando</groupId>
-            <artifactId>problem-spring-web-starter</artifactId>
-            <version>${problem-spring-web.version}</version>
-        </dependency>
-        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
             <scope>runtime</scope>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -86,13 +80,11 @@
         <%_ if (features.includes('localstack')) { _%>
         <dependency>
             <groupId>io.awspring.cloud</groupId>
-            <artifactId>spring-cloud-aws-autoconfigure</artifactId>
-            <version>${spring-cloud-aws-version}</version>
+            <artifactId>spring-cloud-aws-starter</artifactId>
         </dependency>
         <dependency>
             <groupId>io.awspring.cloud</groupId>
-            <artifactId>spring-cloud-aws-messaging</artifactId>
-            <version>${spring-cloud-aws-version}</version>
+            <artifactId>spring-cloud-aws-starter-sqs</artifactId>
         </dependency>
         <%_ } _%>
         <%_ if (features.includes('elk')) { _%>
@@ -120,8 +112,8 @@
         <%_ } _%>
         <%_ if (databaseType === 'mysql') { _%>
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
             <scope>runtime</scope>
         </dependency>
         <%_ } _%>
@@ -152,13 +144,12 @@
         <%_ } _%>
         <dependency>
             <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-ui</artifactId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>${springdoc-openapi.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>${commons-lang3.version}</version>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
@@ -174,7 +165,6 @@
         <dependency>
             <groupId>org.awaitility</groupId>
             <artifactId>awaitility</artifactId>
-            <version>${awaitility.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -209,6 +199,12 @@
             <artifactId>localstack</artifactId>
             <scope>test</scope>
         </dependency>
+        <!-- AWS SDK v1 is required by testcontainers-localstack -->
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-core</artifactId>
+            <scope>test</scope>
+        </dependency>
         <%_ } _%>
     </dependencies>
 
@@ -221,6 +217,15 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <%_ if (features.includes('localstack')) { _%>
+            <dependency>
+                <groupId>io.awspring.cloud</groupId>
+                <artifactId>spring-cloud-aws-dependencies</artifactId>
+                <version>${spring-cloud-aws.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <%_ } _%>
             <dependency>
                 <groupId>org.testcontainers</groupId>
                 <artifactId>testcontainers-bom</artifactId>
@@ -245,8 +250,8 @@
                 </executions>
             </plugin>
             <plugin>
-                <groupId>pl.project13.maven</groupId>
-                <artifactId>git-commit-id-plugin</artifactId>
+                <groupId>io.github.git-commit-id</groupId>
+                <artifactId>git-commit-id-maven-plugin</artifactId>
                 <executions>
                     <execution>
                         <goals>
@@ -450,6 +455,9 @@
             <id>spring-milestones</id>
             <name>Spring Milestones</name>
             <url>https://repo.spring.io/milestone</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
         </repository>
     </repositories>
 </project>
